--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <source src="vid/VID-20211121-WA0188.mp4" type="video/mp4">
             </video>
             <video autoplay muted loop playsinline>
-                <source src="Vid/VID-20220824-WA0014.mp4" type="video/mp4">
+                <source src="vid/VID-20220824-WA0014.mp4" type="video/mp4">
             </video>
         </section>
     </fieldset>
