--- a/index.html
+++ b/index.html
@@ -1,174 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Manda a llamar fuentes externas de Google Fonts se carguen de manera optimizada y rápida para ser usadas en tu sitio web.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css"><!-- Manda a llamar la hoja de estilos -->
     <title>Proyecto</title>
 </head>
 <body>
     <header>
         <h1>AUTOBIOGRAFIA</h1>
     </header>
-    <fieldset id="historia">
-        <legend>Historia Familiar</legend>
-        <p>Contenido sobre la historia familiar.</p>
-    </fieldset>
+    <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
+        <nav class="navegador contenedor"> <!-- Manda a llamar la clase navegador y su sub clase contenedor del archivo css -->
+            <a href="html/historia.html">Historia</a>
+            <a href="html/personal.html">Personal</a>
+            <a href="html/academico.html">Academico</a>
+            <a href="html/metas.html">Metas</a>
+            <a href="html/pasatiempos.html">Pasatiempos</a>
+            <a href="html/loquemegusta.html">Lo que me gusta</a>
+            <a href="html/loquenomegusta.html">Lo que no me gusta</a>
+            <a href="html/admiro.html">A quienes admiro</a>
+            <a href="html/sitiosrecomendados.html">Sitios recomendados</a>
+        </nav>
+    </div>
+    <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
 
-    <fieldset id="niñez">
-        <legend>Niñez</legend>
-        <p>Contenido sobre la niñez.</p>
-    </fieldset>
-
-    <fieldset id="adolescencia">
-        <legend>Adolescencia</legend>
-        <p>Contenido sobre la adolescencia.</p>
-    </fieldset>
-
-    <fieldset id="personal">
-        <legend>Personal</legend>
-        <p>Contenido personal.</p>
-    </fieldset>
-
-    <fieldset id="academico">
-        <legend>Académico</legend>
-        <p>Contenido académico.</p>
-    </fieldset>
-
-    <fieldset id="metas">
-        <legend>Metas</legend>
-        <p>Contenido sobre metas.</p>
-    </fieldset>
-
-    <fieldset id="pasatiempos">
-        <legend>Pasatiempos</legend>
-        <p>Contenido sobre pasatiempos.</p>
-    </fieldset>
-
-    <fieldset id="deportes">
-        <legend>Deportes</legend>
-        <section>
-            <ul><li>Lucha grecorromana</li></ul>
-            <ul><li>EA sports de age of empires 2</li></ul>
-        </section>
-    </fieldset>
-
-    <fieldset id="loquemegusta">
-        <legend>Lo que me gusta</legend>
-        <p>Contenido sobre lo que me gusta.</p>
-    </fieldset>
-
-    <fieldset id="loquenomegusta">
-        <legend>Lo que no me gusta</legend>
-        <p>Contenido sobre lo que no me gusta.</p>
-    </fieldset>
-
-    <fieldset id="admiro">
-        <legend>A quienes admiro</legend>
-        <p>Contenido sobre a quienes admiro.</p>
-    </fieldset>
-
-    <fieldset>
-        <legend>Fotos</legend>
-        <section class="Fotos_y_videos">
-            <img src="img/IMG_20240203_150012.jpg" alt="Foto 1">
-            <section>
-                <img src="img/IMG_20170628_181010279_HDR.jpg" alt="Foto 2">
-                <img src="img/IMG_20170628_180715555.jpg" alt="Foto 3">
-            </section>
-            <section>
-                <img src="img/IMG_20170628_180718747.jpg" alt="Foto 4">
-                <img src="img/IMG_20161104_193131464.jpg" alt="Foto 5">
-            </section>
-            <section>
-                <img src="img/IMG_20170628_180913692_HDR.jpg" alt="Foto 6">
-                <img src="img/IMG-20221121-WA0001.jpg" alt="Foto 7">
-                <img src="img/IMG-20250429-WA0057.jpg" alt="Foto 8">
-            </section>
-            <img src="img/IMG-20220825-WA0001.jpg" alt="Foto 9">
-            <section>
-                <img src="img/IMG-20211212-WA0004.jpg" alt="Foto 10">
-                <img src="img/IMG-20250429-WA0084.jpg" alt="Foto 11">
-            </section>
-            <section>
-                <img src="img/IMG-20201206-WA0013.jpg" alt="Foto 12">
-                <img src="img/IMG-20201006-WA0309.jpg" alt="Foto 13">
-            </section>
-            <img src="img/IMG-20201006-WA0197.jpg" alt="Foto 14">
-            <img src="img/IMG-20250429-WA0062.jpg" alt="Foto 15">
-            <section>
-                <img src="img/IMG-20220825-WA0000.jpg" alt="Foto 16">
-                <img src="img/IMG-20201003-WA0013.jpg" alt="Foto 17">
-                <img src="img/IMG-20201003-WA0018.jpg" alt="Foto 18">
-            </section>
-            <img src="img/FB_IMG_1483680352029.jpg" alt="Foto 18">
-            <img src="img/FB_IMG_1483680154789.jpg" alt="Foto 19">
-            <img src="img/FB_IMG_1483679850860.jpg" alt="Foto 20">
-            <section>
-                <img src="img/FB_IMG_1483680175810.jpg" alt="Foto 21">
-                <img src="img/‪+502 5558 4863‬ 20180520_185943.jpg" alt="Foto 22">
-            </section>
-        </section>
-    </fieldset>
-
-    <fieldset>
-        <legend>Videos</legend>
-        <section class="Fotos_y_videos">
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20230108-WA0055.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20230108-WA0058.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/20210811_224413.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20220311-WA0095.mp4" type="video/mp4">
-            </video>
-            <section>
-                <video autoplay muted loop playsinline>
-                    <source src="vid/VID_20220707_014831.mp4" type="video/mp4">
-                </video>
-                <video autoplay muted loop playsinline>
-                    <source src="vid/20210813_225940.mp4" type="video/mp4">
-                </video>
-                <video autoplay muted loop playsinline>
-                    <source src="vid/VID_20220628_132137.mp4" type="video/mp4">
-                </video>
-            </section>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211107-WA0012.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211107-WA0013.mp4" type="video/mp4">
-            </video>
-
-            <video autoplay muted loop playsinline>
-                <source src="vid/20211121_112238.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/20211121_112254.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211121-WA0124.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211121-WA0130.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211121-WA0185.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20211121-WA0188.mp4" type="video/mp4">
-            </video>
-            <video autoplay muted loop playsinline>
-                <source src="vid/VID-20220824-WA0014.mp4" type="video/mp4">
-            </video>
-        </section>
-    </fieldset>
+    </main>
+    <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
+        <p>Diego Alejandro Vásquez Yol</p>
+        <p>9390 25 16100</p>
+        <p>Naranjo   Sección B</p>
+        <p>Introducción a los sistemas de cómputo</p>
+    </footer>
 </body>
 </html>
