--- a/html/historia.html
+++ b/html/historia.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Cambia el icono en la ventana -->
+    <link rel="icon" href="../img/torre-de-pc.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Manda a llamar fuentes externas de Google Fonts se carguen de manera optimizada y rápida para ser usadas en tu sitio web.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
