--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/torre-de-pc.png" type="image/png">
     <!-- Manda a llamar fuentes externas de Google Fonts se carguen de manera optimizada y rápida para ser usadas en tu sitio web.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css"><!-- Manda a llamar la hoja de estilos -->
+    <!-- Manda a llamar las hojas de estilos -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Proyecto</title>
 </head>
 <body>
     <header>
-        <h1>AUTOBIOGRAFIA</h1>
+        <p>AUTOBIOGRAFIA</p>
     </header>
     <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
         <nav class="navegador contenedor"> <!-- Manda a llamar la clase navegador y su sub clase contenedor del archivo css -->
@@ -28,7 +31,10 @@
         </nav>
     </div>
     <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
-
+        <p>Este es mi proyecto del <span>Introducción a los sistemas de cómputo</span> el cual es una autofigrafia en la cual veremos parte de mis vivencias.</p><br>
+        <p>Este proyecto esta hecho con <span>HTML y CSS</span></p><br>
+        <p>Se esta utilizandó una hoja de estilos globales y otra que es especial para archivo html, ya que cada titulo es un archivo HTML</p><br>
+        <p>Para ingresar a cada seccion pase el cursosr en los titulos de arriba si quiere volver a esta paguina le da al titulo: <span>AUTOBIOGRAFIA</span></p>
     </main>
     <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
         <p>Diego Alejandro Vásquez Yol</p>
