--- a/html/admiro.html
+++ b/html/admiro.html
@@ -34,6 +34,7 @@
 <main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
     <fieldset>
         <legend>Historia</legend>
+        <p>Hola</p>
     </fieldset>
 </main>
 </body>
