--- a/html/admiro.html
+++ b/html/admiro.html
@@ -35,6 +35,7 @@
     <fieldset>
         <legend>Historia</legend>
         <h2>A quienes admiro</h2>
+        <p>Gengis kan</p>
     </fieldset>
 </main>
 </body>
