--- a/html/admiro.html
+++ b/html/admiro.html
@@ -32,7 +32,7 @@
     </nav>
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
-
+    <h1>Gen</h1>
 </main>
 </body>
 </html>
