--- a/html/historia.html
+++ b/html/historia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <!-- Cambia el icono en la ventana -->
@@ -9,15 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css"><!-- Manda a llamar la hoja de estilos -->
-    <title>Proyecto</title>
+    <!-- Manda a llamar la hoja de estilos -->
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/historia.css">
+    <title>Academico</title>
 </head>
 <body>
 <header>
     <a href="../index.html">AUTOBIOGRAFIA</a>
 </header>
 <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
-    <nav class="navegador contenedor"> <!-- Manda a llamar la clase navegador y su sub clase contenedor del archivo css -->
+    <nav class="navegador contenedor"> <!-- Manda a llamar la clase "navegador" y su subclase "contenedor" del archivo css -->
         <a href="historia.html">Historia</a>
         <a href="personal.html">Personal</a>
         <a href="academico.html">Academico</a>
