--- a/html/loquemegusta.html
+++ b/html/loquemegusta.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <!-- Cambia el icono en la ventana -->
+    <link rel="icon" href="../img/torre-de-pc.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Manda a llamar fuentes externas de Google Fonts se carguen de manera optimizada y rápida para ser usadas en tu sitio web.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Proyecto</title>
+    <!-- Manda a llamar la hoja de estilos -->
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/loquemegusta.css">
+    <title>Academico</title>
 </head>
 <body>
-<nav>
-    <a href="historia.html" class="activo">Historia</a>
-    <a href="niñez.html">Niñez</a>
-    <a href="adolescencia.html">Adolesencia</a>
-    <a href="personal.html">Personal</a>
-    <a href="academico.html">Academico</a>
-    <a href="metas.html">Metas</a>
-    <a href="pasatiempos.html">Pasatiempos</a>
-    <a href="loquemegusta.html">Lo que me gusta</a>
-    <a href="loquenomegusta.html">Lo que no me gusta</a>
-    <a href="admiro.html">A quienes admiro</a>
-    <a href="sitiosrecomendados.html">Sitios recomendados</a>
-</nav>
+<header>
+    <a href="../index.html">AUTOBIOGRAFIA</a>
+</header>
+<div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
+    <nav class="navegador contenedor"> <!-- Manda a llamar la clase "navegador" y su subclase "contenedor" del archivo css -->
+        <a href="historia.html">Historia</a>
+        <a href="personal.html">Personal</a>
+        <a href="academico.html">Academico</a>
+        <a href="metas.html">Metas</a>
+        <a href="pasatiempos.html">Pasatiempos</a>
+        <a href="loquemegusta.html">Lo que me gusta</a>
+        <a href="loquenomegusta.html">Lo que no me gusta</a>
+        <a href="admiro.html">A quienes admiro</a>
+        <a href="sitiosrecomendados.html">Sitios recomendados</a>
+    </nav>
+</div>
 <main>
     <fieldset>
         <legend>Historia</legend>
