--- a/html/admiro.html
+++ b/html/admiro.html
@@ -32,7 +32,20 @@
     </nav>
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
-    <h1>Gen</h1>
+    <h1>Nikolas tesla</h1>
+    <p>Admiro a Nikola Tesla por su brillantez y su visión innovadora en el campo de la electricidad y la tecnología. Me fascina cómo sus ideas y descubrimientos sentaron las bases para muchos de los avances tecnológicos que disfrutamos hoy en día, como la corriente alterna, que revolucionó la forma en que utilizamos la energía.</p>
+    <p>Tesla fue un verdadero pionero, capaz de imaginar un futuro donde la electricidad podría ser accesible y útil para todos. Su trabajo en la transmisión inalámbrica de energía y sus experimentos con la radio y la comunicación a distancia me inspiran, ya que demuestran su capacidad para pensar más allá de los límites de su tiempo.</p>
+    <p>Me despertó el interés por aprender sobre las telecomunicaciones y el envío de información a largas distancias, así como por comprender cómo la tecnología puede conectar a las personas y transformar nuestras vidas.</p>
+    <p>Conocí a este fascinante personaje a través de un reportaje hecho por HISTORY Latinoamérica, el cual estaba viendo con mis padres un día. Ese programa me abrió los ojos a su increíble legado y me hizo apreciar aún más su contribución al mundo moderno.</p>
+    <p>Bibliografía de <a href="https://historia.nationalgeographic.com.es/a/nikola-tesla-genio-electricidad_14494">Nikolas tesla</a></p>
+
+    <h1>Gengis Kan</h1>
+    <p>Admiro a Gengis Kan por su capacidad para unificar tribus nómadas y crear uno de los imperios más grandes de la historia. Me impresiona cómo promovió la libertad religiosa y abolió la tortura, lo que lo convierte en un líder sorprendentemente moderno para su época.</p>
+    <p>Gengis Kan logró unificar diversas tribus nómadas de Mongolia, creando un sentido de identidad y cohesión entre ellas. Su imperio se expandió rápidamente, abarcando vastas áreas de Asia y Europa, lo que tuvo un impacto duradero en la historia mundial. Implementó un sistema administrativo eficiente que facilitó la gobernanza de su extenso imperio.</p>
+    <p>Además, promovió la tolerancia religiosa, permitiendo que diferentes creencias coexistieran dentro de su imperio, y prohibió el uso de la tortura, lo que refleja un enfoque más humanitario en comparación con otros líderes de su tiempo. Su imperio facilitó el comercio y el intercambio cultural a lo largo de la Ruta de la Seda, conectando Oriente y Occidente.</p>
+    <p>Personalmente, conocí a este fascinante personaje a través del juego <strong>"Age of Empires II"</strong> de 1999, donde su figura se presenta como un líder formidable y estratégico. Este juego no solo me permitió aprender sobre su historia, sino que también despertó mi interés por su legado y su impacto en el mundo.</p>
+    <p>Lo que me llevó a interesarme aún más en los juegos de estrategia y a comprender la importancia de ser más analítico en la toma de decisiones. A través de estas experiencias, he desarrollado habilidades que me han ayudado a abordar problemas de manera más efectiva y a pensar críticamente sobre las situaciones, tanto en el juego como en la vida real.</p>
+    <p>Bibliografía de <a href="https://historia.nationalgeographic.com.es/a/gengis-kan-carismatico-conquistador-mongol_9161">Gengis Kan</a></p>
 </main>
 </body>
 </html>
