--- a/html/historia.html
+++ b/html/historia.html
@@ -32,6 +32,9 @@
     </nav>
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
+    <h1>Nacimeiento</h1>
+    <p>Naci un 3 de febrer el 2003, el cual fue dia lunes.</p>
+    <p>Mi nacimento fue antes de tiempo que me estaba quedano sin líquido amniótico por lo cual fui de emerjencia</p>
 
 </main>
 <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
