--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <p>AUTOBIOGRAFIA</p>
+        <p>AUTOBIOGRAFÍA</p>
     </header>
     <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
         <nav class="navegador contenedor"> <!-- Manda a llamar la clase navegador y su sub clase contenedor del archivo css -->
@@ -31,10 +31,10 @@
         </nav>
     </div>
     <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
-        <p>Este es mi proyecto del <span>Introducción a los sistemas de cómputo</span> el cual es una autofigrafia en la cual veremos parte de mis vivencias.</p><br>
-        <p>Este proyecto esta hecho con <span>HTML y CSS</span></p><br>
-        <p>Se esta utilizandó una hoja de estilos globales y otra que es especial para archivo html, ya que cada titulo es un archivo HTML</p><br>
-        <p>Para ingresar a cada seccion pase el cursosr en los titulos de arriba si quiere volver a esta paguina le da al titulo: <span>AUTOBIOGRAFIA</span></p>
+        <p>Este es mi proyecto de <span>Introducción a los sistemas de cómputo</span>, el cual es una autobiografía en la que se mostrarán algunas de mis vivencias.</p><br>
+        <p>El proyecto está hecho con <span>HTML y CSS</span></p><br>
+        <p>Se utiliza una hoja de estilos global y otra hoja de estilos especial para cada archivo HTML, ya que cada título corresponde a un archivo HTML diferente.</p><br>
+        <p>Para ingresar a cada sección, coloca el cursor sobre los títulos de arriba. Si quieres volver a esta página, haz clic en el título: <span>AUTOBIOGRAFÍA.</span></p>
     </main>
     <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
         <p>Diego Alejandro Vásquez Yol</p>
