--- a/html/pasatiempos.html
+++ b/html/pasatiempos.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header>
-    <a href="../index.html">AUTOBIOGRAFIA</a>
+    <a href="../index.html">AUTOBIOGRAFÍA</a>
 </header>
 <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
     <nav class="navegador contenedor"> <!-- Manda a llamar la clase "navegador" y su subclase "contenedor" del archivo css -->
