--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <a href="html/sitiosrecomendados.html">Sitios recomendados</a>
         </nav>
     </div>
-    <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
-        <p>Este es mi proyecto de <span>Introducción a los sistemas de cómputo</span>, el cual es una autobiografía en la que se mostrarán algunas de mis vivencias.</p><br>
-        <p>El proyecto está hecho con <span>HTML y CSS</span></p><br>
-        <p>Se utiliza una hoja de estilos global y otra hoja de estilos especial para cada archivo HTML, ya que cada título corresponde a un archivo HTML diferente.</p><br>
-        <p>Para ingresar a cada sección, coloca el cursor sobre los títulos de arriba. Si quieres volver a esta página, haz clic en el título: <span>AUTOBIOGRAFÍA.</span></p>
+    <main class="contenedor sombra ordenar"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
+        <p>Este es mi proyecto de <span>Introducción a los sistemas de cómputo</span>, el cual es una autobiografía en la que se mostrarán algunas de mis vivencias.</p>
+        <p>El proyecto está hecho con <span>HTML y CSS</span></p>
+        <p>Se utiliza una hoja de estilos global y otra hoja de estilos especial para cada archivo HTML, ya que cada título corresponde a un archivo HTML diferente.</p>
+        <p>Para ingresar a cada sección, coloca el cursor sobre los títulos de arriba. Si quieres volver a esta página, haz clic en el título: <span>AUTOBIOGRAFÍA.</span>
     </main>
     <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
         <p>Diego Alejandro Vásquez Yol</p>
