Se anclo todos los titulos

--- a/html/academico.html
+++ b/html/academico.html
@@ -18,7 +18,7 @@
 <header>
     <a href="../index.html">AUTOBIOGRAFÍA</a>
 </header>
-<div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
+<div class="subtitulo anclar"> <!-- Manda a llamar la clase subtitlo del archivo css -->
     <nav class="navegador contenedor"> <!-- Manda a llamar la clase "navegador" y su subclase "contenedor" del archivo css -->
         <a href="historia.html">Historia</a>
         <a href="personal.html">Personal</a>
