--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <p>AUTOBIOGRAFÍA</p>
     </header>
-    <div class="subtitulo"> <!-- Manda a llamar la clase subtitlo del archivo css -->
+    <div class="subtitulo anclar"> <!-- Manda a llamar la clase subtitlo del archivo css -->
         <nav class="navegador contenedor"> <!-- Manda a llamar la clase navegador y su sub clase contenedor del archivo css -->
             <a href="html/historia.html">Historia</a>
             <a href="html/personal.html">Personal</a>
