Se colocaron nuevos campos en sitiosrecomendados

--- a/html/sitiosrecomendados.html
+++ b/html/sitiosrecomendados.html
@@ -12,7 +12,7 @@
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sitiosrecomendados.css">
-    <title>Academico</title>
+    <title>Sitios que recomiendo</title>
 </head>
 <body>
 <header>
@@ -34,7 +34,20 @@
 <main class="contenedor sombra">
     <p class="nota">Nota: Si quiere dirigirse a los sitios, déle clic al logo.</p>
     <ul>
-
+        <li>
+            <div class="pagina">
+                <h1>Github</h1>
+                <a href="https://github.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1200px-GitHub_Invertocat_Logo.svg.png" alt="github"></a>
+            </div>
+            <p class="porque">Es una herramienta poderosa y versátil que facilita el desarrollo apps colaborativas/personal, la gestión de proyectos, el manejo de versiones, y el aprendizaje en la comunidad de programación.  <strong>Ejemplo esta pagina esta publicada en ginthub</strong></p>
+        </li>
+        <li>
+            <div class="pagina">
+                <h1>Cisco</h1>
+                <a href="https://www.netacad.com/es"><img src="https://www.netacad.com/sfa-assets/images/svg/netacad_logo_black.svg" alt="Cisco"></a>
+            </div>
+            <p class="porque">Ofrece cursos accesibles y certificaciones reconocidas que ayudan a los estudiantes a desarrollar habilidades valiosas.</p>
+        </li>
         <li>
             <div class="pagina">
                 <h1>Udemy</h1>
@@ -45,7 +58,7 @@
             </div>
         </li>
             <li>
-                    <div class="pagina">
+                <div class="pagina">
                 <h1>Duolingo</h1>
                 <a href="https://es.duolingo.com"><img src="https://store-images.s-microsoft.com/image/apps.38456.9007199267003607.4d66cde1-46fd-42b7-93c7-e05d782f5e5d.cfdf91f5-dc2a-4178-96fa-d2c156ae62cd" alt="Duolingo"></a>
             </div>
