Se queito la viñeta personal y se agragraon logos para pasatiempos

--- a/html/pasatiempos.html
+++ b/html/pasatiempos.html
@@ -12,16 +12,15 @@
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/pasatiempos.css">
-    <title>Academico</title>
+    <title>Pasa tiempos</title>
 </head>
 <body>
 <header>
-    <a href="../index.html">AUTOBIOGRAFÍA</a>
+    <a href="../index.html">AUTOBIOGRAFIA</a>
 </header>
 <div class="subtitulo anclar"> <!-- Manda a llamar la clase subtitlo del archivo css -->
     <nav class="navegador contenedor"> <!-- Manda a llamar la clase "navegador" y su subclase "contenedor" del archivo css -->
         <a href="historia.html">Historia</a>
-        <a href="personal.html">Personal</a>
         <a href="academico.html">Academico</a>
         <a href="metas.html">Metas</a>
         <a href="pasatiempos.html">Pasatiempos</a>
@@ -31,13 +30,28 @@
         <a href="sitiosrecomendados.html">Sitios recomendados</a>
     </nav>
 </div>
-<main>
-    <fieldset>
-        <legend>Historia</legend>
-    </fieldset>
+<main class="contenedor sombra">
+    <h1>Pasa tiempos</h1>
+    <div class="pasatiempos">
+        <img src="../icon/Juegos.png">
+        <p>Los videojuegos</p>
+        <img src="../icon/guitarra.png">
+        <p>Practico guitarra</p>
+        <img src="../icon/tecnoligia.png">
+        <p>Explorar de nuevas tegnologias en musica</p>
+        <img src="../icon/musica.png">
+        <p>Escuchar musica</p>
+        <img src="../icon/Correr.png">
+        <p>Correr por las mañanas</p>
+        <img src="../icon/moto.png">
+        <p>Salir de viaje en moto</p>
+    </div>
 </main>
-<footer>
-    <h1>Hola</h1>
+<footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
+    <p>Diego Alejandro Vásquez Yol</p>
+    <p>9390 25 16100</p>
+    <p>Naranjo   Sección B</p>
+    <p>Introducción a los sistemas de cómputo</p>
 </footer>
 </body>
 </html>
