Se le da ajuste a los textos y las imagenes

--- a/html/historia.html
+++ b/html/historia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <!-- Cambia el icono en la ventana -->
@@ -32,9 +32,41 @@
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
     <h1>Nacimeiento</h1>
-    <p>Naci un 3 de febrer el 2003, el cual fue dia lunes.</p>
-    <p>Mi nacimento fue antes de tiempo que me estaba quedano sin líquido amniótico por lo cual fui de emerjencia</p>
+    <p>Nací en la madrugada del domingo 2 de febrero del 2003 a las 11:30. Mi llegada al mundo estuvo marcada por un momento crítico, ya que mi mamá tenía placenta previa y el líquido amniótico era bastante bajo. Un doctor intentó provocarle un parto natural, pero ella se dio cuenta de lo que quería hacer y le dijo que no era posible. Finalmente, la llevaron a cirugía, donde se encontró con un equipo de médicos que ya estaban bastante cansados, pero afortunadamente, todo salió bien.</p>
+    <p>Cuando mi mamá se recuperó un poco, le preguntaron si querían llevarme con ella, pero decidió que no. Tenía miedo de que yo fuera como mi hermano, que se pasaba llorando. Sin embargo, yo fui tranquilo y no hice ningún ruido.</p>
+    <h2>Niñez</h2>
+    <p>Comencé a estudiar a los 4 años en el Colegio Granja Encantada. Era bastante amigable, cordial y creativo. Sin embargo, tengo una condición llamada piel de príncipe, que me provoca alergias y una alta tolerancia al dolor. Para comunicarme utilizaba las ultimas letras de las palabras.</p>
+    <p>Mis padres solían pensar que no ponía de mi parte en los estudios o que no tenía interés, pero en realidad, tengo dislexia, lo que dificultaba mi aprendizaje. Recuerdo una vez que, jugando con compañeros de clase, me accidenté y me abrí la frente de tal manera que se podía ver el cráneo. Tuve que recibir seis puntos de sutura.</p>
+    <p>Cuando ya éramos un poco mayores, mi hermano le tenía miedo a la oscuridad, solía usarme como un escudo humano.</p>
+    <p>La condición de dislexia se trató hasta mi adolescencia, pero en la niñez fue complicado el estudio, especialmente en lo que respecta a la lectura. Sin embargo, en las áreas de creatividad y matemáticas es donde realmente destacaba.</p>
+    <p>Cuando tenía 6 años, nació mi hermanita, y su llegada trajo un gran cambio a nuestras vidas, ya que se convirtió en la prioridad de la casa. Ella es como mi hermana bulliciosa; cuando no hacía ruido, todos nos preocupábamos y corríamos a ver cómo estaba.</p>
+    <p>A los 8 años, conocí a mis hermanastros: un hermano y dos hermanas que son 13 años mayores que nosotros, siendo la mayor la que más diferencia tiene. Esta experiencia fue bastante impactante para mí, ya que siempre había visto a mi papá como una gran persona, pero me llevé muy bien con ellos.</p>
+    <h3>Fotos y video de niñez</h3>
+    <section class="Fotos_y_videos">
+        <img src="../img/Niñes/FB_IMG_1483679850860.jpg" alt="foto1">
+        <img src="../img/Niñes/FB_IMG_1483680154789.jpg" alt="foto2">
+        <div>
+            <img src="../img/Niñes/FB_IMG_1483680175810.jpg" alt="foto3">
+            <img src="../img/Niñes/IMG_20170628_180715555.jpg" alt="foto5">
+        </div>
+        <img src="../img/Niñes/FB_IMG_1483680352029.jpg" alt="foto4">
 
+        <div>
+            <img src="../img/Niñes/IMG_20170628_180718747.jpg" alt="foto6">
+            <img src="../img/Niñes/IMG_20170628_180913692_HDR.jpg" alt="foto7">
+        </div>
+        <img src="../img/Niñes/IMG_20170628_181010279_HDR.jpg" alt="foto8">
+        <div>
+            <img src="../img/Niñes/Imagen%20de%20WhatsApp%202025-05-12%20a%20las%2000.49.49_8e464439.jpg" alt="foto9">
+            <img src="../img/Niñes/Imagen%20de%20WhatsApp%202025-05-12%20a%20las%2000.49.49_2767612e.jpg" alt="foto10">
+        </div>
+    </section>
+    <h3>Fotos y video de adolescencia</h3>
+    <section class="Fotos_y_videos">
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20230108-WA0055.mp4" type="video/mp4">
+        </video>
+    </section>
 </main>
 <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
     <p>Diego Alejandro Vásquez Yol</p>
