--- a/html/sitiosrecomendados.html
+++ b/html/sitiosrecomendados.html
@@ -38,7 +38,7 @@
                 <h1>Github</h1>
                 <a href="https://github.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1200px-GitHub_Invertocat_Logo.svg.png" alt="github"></a>
             </div>
-            <p class="porque">Es una herramienta poderosa y versátil que facilita el desarrollo apps colaborativas/personal, la gestión de proyectos, el manejo de versiones, y el aprendizaje en la comunidad de programación.  <strong>Ejemplo esta pagina esta publicada en ginthub</strong></p>
+            <p class="porque">Es una herramienta poderosa y versátil que facilita el desarrollo apps colaborativas/personal, la gestión de proyectos, el manejo de versiones, y el aprendizaje en la comunidad de programación.  <strong>Ejemplo esta pagina esta publicada en github</strong></p>
         </li>
         <li>
             <div class="pagina">
