Cambios en historia.html y en academico.html

--- a/html/academico.html
+++ b/html/academico.html
@@ -35,6 +35,16 @@
         <legend>Diplomas</legend>
         <section class="diplomas">
             <div class="texto">
+                <h2>DIKAI CODING <strong>2025 - 2025</strong></h2>
+                <ul>
+                    <li>Certificación Avanzado de Tecnología de Codificación Láser</li>
+                    <li>Certificación de Tecnología TTO D03S & D05S</li>
+                </ul>
+            </div>
+            <div class="imagen">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQc620pd_Wrr3FzpJtIWO9fcm2T6UK4dmpaTOV8Edo5jDkHbmjZKYWnr8craQfGcM3G1Ns&usqp=CAU" alt="DIKAI">
+            </div>
+            <div class="texto">
                 <h2>Udemy <strong>2023- 2023</strong></h2>
                 <p>Desarrollo Web Completo con HTML5, CSS3, JS AJAX PHP y MySQL</p>
                 <p>Pagina de <a href="https://www.udemy.com">Udemy</a></p>
@@ -71,7 +81,7 @@
                     <p>Estudios de ingenieria en sistemas de computacion</p>
                     <p>Cursando el primer semestre llevando los cursos de:</p>
                     <ul>
-                        <li>INTRODUCCIÓN A LOS SISTEMAS DE CÓMPUTO</li>
+                        <li CLASS="RESALTAR">INTRODUCCIÓN A LOS SISTEMAS DE CÓMPUTO</li>
                         <li>LÓGICA DE SISTEMAS</li>
                         <li>CONTABILIDAD I</li>
                         <li>METODOLOGÍA DE LA INVESTIGACIÓN</li>
