--- a/html/historia.html
+++ b/html/historia.html
@@ -61,10 +61,64 @@
             <img src="../img/Niñes/Imagen%20de%20WhatsApp%202025-05-12%20a%20las%2000.49.49_2767612e.jpg" alt="foto10">
         </div>
     </section>
+    <h2>Adolescencia</h2>
+    <p>Estudié en el colegio Cristiano Pueblo de Dios hasta completar mis estudios básicos. Durante esa etapa, conocí a dos de mis mejores amigos, con quienes aún mantengo contacto y salimos de vez en cuando. Nuestra amistad ha perdurado a lo largo de los años, y siempre es un placer compartir momentos juntos.</p>
+    <p>Comencé en 2020 a estudiar en el Instituto Tecnológico de Computación la carrera de Perito en Electrónica. Durante este tiempo, adquirí valiosas experiencias que me han sido de gran utilidad en el mundo laboral. Además, conocí a personas que me brindaron su apoyo en momentos cruciales de mi formación. Sin embargo, lamentablemente, esas amistades no perduraron en el tiempo. A pesar de ello, cada una de esas interacciones ha dejado una huella significativa en mi vida.</p>
+    <p>Subir al volcán de Acatenango fue una experiencia increíblemente intensa y llena de desafíos. Debo confesar que en momentos de dificultad, deseaba que la tierra me tragara o, incluso, que me lanzara por un barranco. Siendo sincero, no repetiría la aventura, ya que fue realmente agotadora.</p>
+    <p>El esfuerzo tan enorme solo me recompensó con la vista de un amanecer, y reflexionando, creo que no vale la pena ese sufrimiento. Sin embargo, esta experiencia me enseñó que tengo una gran capacidad para seguir adelante, incluso cuando mi cuerpo me está exigiendo demasiado y estoy al borde del agotamiento.</p>
+    <p>Además, hubo un momento en que nos perdimos, lo que añadió aún más tensión a la jornada. Lo que más me quedó de esta travesía es que, sin importar cuánto tiempo tome, siempre puedo llegar a mi destino.</p>
+    <p>En el último año de carrera, experimenté un gran triunfo al obtener el primer lugar en los proyectos de electrónica, un esfuerzo en el que trabajamos durante todo el año. Aunque nuestro proyecto enfrentó muchos problemas, especialmente con nuestros preliminares y la falta de apoyo de compañeros, logré avanzar prácticamente solo con el esfuerzo de una compañera, pero cuando se anunció que éramos los ganadores, sentí una mezcla de éxtasis y alivio en muchos sentidos. Este logro no solo representa un reconocimiento a nuestro trabajo arduo, sino también una victoria ante las adversidades que enfrentamos.</p>
     <h3>Fotos y video de adolescencia</h3>
     <section class="Fotos_y_videos">
         <video autoplay muted loop playsinline>
+            <source src="../vid/20210811_224413.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/20211121_112238.mp4" type="video/mp4">
+        </video>
+        <div>
+            <video autoplay muted loop playsinline>
+                <source src="../vid/20210813_225940.mp4" type="video/mp4">
+            </video>
+                <video autoplay muted loop playsinline>
+                    <source src="../vid/VID_20220707_014831.mp4" type="video/mp4">
+                </video>
+            <video autoplay muted loop playsinline>
+                <source src="../vid/VID_20220628_132137.mp4" type="video/mp4">
+            </video>
+        </div>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/20211121_112254.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211107-WA0012.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211107-WA0013.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211121-WA0124.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211121-WA0130.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211121-WA0185.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20211121-WA0188.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20220311-WA0095.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20220824-WA0014.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
             <source src="../vid/VID-20230108-WA0055.mp4" type="video/mp4">
+        </video>
+        <video autoplay muted loop playsinline>
+            <source src="../vid/VID-20230108-WA0058.mp4" type="video/mp4">
         </video>
     </section>
 </main>
