Cambios en historia.html y en academico.html

--- a/html/historia.html
+++ b/html/historia.html
@@ -76,7 +76,7 @@
         <video autoplay muted loop playsinline>
             <source src="../vid/20211121_112238.mp4" type="video/mp4">
         </video>
-        <div>
+        <div class="videop">
             <video autoplay muted loop playsinline>
                 <source src="../vid/20210813_225940.mp4" type="video/mp4">
             </video>
