Cambios en metas

--- a/html/admiro.html
+++ b/html/admiro.html
@@ -12,7 +12,7 @@
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/admiro.css">
-    <title>Academico</title>
+    <title>Admiro</title>
 </head>
 <body>
 <header>
