--- a/html/historia.html
+++ b/html/historia.html
@@ -12,7 +12,7 @@
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/historia.css">
-    <title>Academico</title>
+    <title>Historia</title>
 </head>
 <body>
 <header>
