--- a/html/loquemegusta.html
+++ b/html/loquemegusta.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/loquemegusta.css">
-    <title>Academico</title>
+    <link rel="stylesheet" href="../css/loquenomegusta.css">
+    <title>Lo que me gusta</title>
 </head>
 <body>
 <header>
@@ -30,13 +30,16 @@
         <a href="sitiosrecomendados.html">Sitios recomendados</a>
     </nav>
 </div>
-<main>
+<main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
     <fieldset>
         <legend>Historia</legend>
     </fieldset>
 </main>
-<footer>
-    <h1>Hola</h1>
+<footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
+    <p>Diego Alejandro Vásquez Yol</p>
+    <p>9390 25 16100</p>
+    <p>Naranjo   Sección B</p>
+    <p>Introducción a los sistemas de cómputo</p>
 </footer>
 </body>
 </html>
