--- a/html/metas.html
+++ b/html/metas.html
@@ -12,7 +12,7 @@
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/metas.css">
-    <title>Academico</title>
+    <title>Metas</title>
 </head>
 <body>
 <header>
@@ -30,13 +30,26 @@
         <a href="sitiosrecomendados.html">Sitios recomendados</a>
     </nav>
 </div>
-<main>
-    <fieldset>
-        <legend>Historia</legend>
-    </fieldset>
+<main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
+    <h1>Metas a corto plazo</h1>
+    <ul>
+        <li><p>Cambiar mis habitos</p></li>
+        <li><p>Mejore mis relaciones interpersonales</p></li>
+        <li><p>Investigar opciones de financiamiento</p></li>
+    </ul>
+    <h1>Metas a corto plazo</h1>
+    <ul>
+        <li><p>Comprar un apartameto</p></li>
+        <li><p>Comprar un carro</p></li>
+        <li><p>Expandir mis clietes a los que les instalo camara y alarmas</p></li>
+        <li><p>Ahorrar para el pago inicial</p></li>
+    </ul>
 </main>
-<footer>
-    <h1>Hola</h1>
+<footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
+    <p>Diego Alejandro Vásquez Yol</p>
+    <p>9390 25 16100</p>
+    <p>Naranjo   Sección B</p>
+    <p>Introducción a los sistemas de cómputo</p>
 </footer>
 </body>
 </html>
