Cambios en metas

--- a/html/loquemegusta.html
+++ b/html/loquemegusta.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Pangolin&family=Silkscreen&display=swap" rel="stylesheet">
     <!-- Manda a llamar la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/loquenomegusta.css">
+    <link rel="stylesheet" href="../css/loquemegusta.css">
     <title>Lo que me gusta</title>
 </head>
 <body>
@@ -31,9 +31,16 @@
     </nav>
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
-    <fieldset>
-        <legend>Historia</legend>
-    </fieldset>
+   <h1>Lo que me gusta</h1>
+    <div>
+        <ul class="listaper">
+            <li class="img1">El jugar el juego Age Of Empires</li>
+            <li class="img2">Las motos</li>
+            <li class="img3">El juego de ajedrez</li>
+            <li class="img4">El estructurado de redes</li>
+            <li class="img5">Automatizacion en la industria</li>
+        </ul>
+   </div>
 </main>
 <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
     <p>Diego Alejandro Vásquez Yol</p>
