--- a/html/loquenomegusta.html
+++ b/html/loquenomegusta.html
@@ -31,9 +31,17 @@
     </nav>
 </div>
 <main class="contenedor sombra"> <!-- Manda a llamar la clase "contenedor" y la subclase sombra del archivo css -->
-    <fieldset>
-        <legend>Historia</legend>
-    </fieldset>
+    <h1>Lo que no me gusta</h1>
+    <div>
+        <ul class="listaper">
+            <li class="img1">Subir montañas</li>
+            <li class="img2">Trafico</li>
+            <li class="img3">Leer</li>
+            <li class="img4">Los cementerios</li>
+            <li class="img5">El calor</li>
+            <li class="img6">Peliculas de romance</li>
+        </ul>
+    </div>
 </main>
 <footer class="footer"> <!-- Manda a llamar la clase footer del archivo css -->
     <p>Diego Alejandro Vásquez Yol</p>
