Cambios en index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </nav>
     </div>
     <main class="contenedor sombra ordenar"> <!-- Manda a llamar la clase contenedor y la sub clase sombra del archivo css -->
+        <p><a href="https://umgt-my.sharepoint.com/:b:/g/personal/dvasquezy3_miumg_edu_gt/ETA7CL701LNKi1GxZcYU7NQB0MDoQmVlK6j5njDpDRWN1Q?e=l372jh">Dodumentacion del proyecto</a></p>
         <p>Este es mi proyecto de <span>Introducción a los sistemas de cómputo</span>, el cual es una autobiografía en la que se mostrarán algunas de mis vivencias.</p>
         <p>El proyecto está hecho con <span>HTML y CSS</span></p>
         <p>Se utiliza una hoja de estilos global y otra hoja de estilos especial para cada archivo HTML, ya que cada título corresponde a un archivo HTML diferente.</p>
